<resources>
    <string name="app_name">IOnline</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="qiangdan">抢单</string>
    <string name="friends">朋友</string>
    <string name="message">消息</string>
    <string name="settings">设置</string>

    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>

    <string name="register_activity">注册</string>
    <string name="reg_detail_activity">填写详细信息</string>
    <string name="release_order_activity">发布任务</string>
    <string name="back">返回</string>
    <string name="tab01">首 页</string>
    <string name="tab02">说 说</string>
    <string name="tab03">消 息</string>
    <string name="tab04_title">个人中心</string>


    <string name="action_voice_rec">action voice rec</string>
    <string name="action_taxi">action taxi</string>
    <string name="action_change_colors">change style</string>

    <string name="action_type">类型</string>
    <string name="action_juli">距离</string>
    <string name="action_locations">交易点</string>
    <string name="default_name">默认</string>
    <string name="novalues">没有查询到结果</string>
    <string name="release_order">发布任务</string>
    <string name="search_order">查找任务</string>
    <string name="update_pwd">修改密码</string>
    <string name="kong"></string>

</resources>
